# AnyPlug

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PROTOCOL.md  README.md  ROADMAP.md  SECURITY.md
.claude/skills/release/: SKILL.md
.claude/skills/tdd/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: android-build.yml  ci.yml  docker.yml  e2e-linux.yml  release.yml  windows-installer.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/common/: build.gradle.kts  proguard-rules.pro
android/common/src/main/: AndroidManifest.xml
android/tv/: build.gradle.kts
client/usbip-client/: Cargo.toml
client/usbip-client/src/: client.rs  daemon.rs  discovery.rs  lib.rs  main.rs  reconnect.rs  vhci.rs  vhci_linux.rs  vhci_windows.rs
client/usbip-client/tests/: injection_seam.rs
docs/: ANDROID-TV.md  BUILDING.md  G920-SPECIFIC.md  PERFORMANCE.md  SETUP.md  TROUBLESHOOTING.md
docs/adr/: 0001-usb-ip-protocol.md  004-macos-driverkit-vhci.md
installer/windows/: anyplug.nsi
server/usbip-server/: Cargo.toml
server/usbip-server/benches/: forward_bench.rs
server/usbip-server/src/: bandwidth.rs  batcher.rs  crypto_stream.rs  discovery.rs  lib.rs  main.rs  metrics.rs  server.rs  urb_executor.rs  usb.rs  usb_backend.rs
server/usbip-server/tests/: api.rs  hotplug_integration.rs  server_wire_test.rs
shared/usbip-core/: Cargo.toml
shared/usbip-core/src/: crypto.rs  descriptor.rs  error.rs  lib.rs  protocol.rs  reply.rs  urb.rs
web/: next.config.js  package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: ConfigEditor.tsx  ConnectionManager.tsx  DeviceInventory.tsx  LatencyDashboard.tsx  Layout.tsx  ServerHealth.tsx
web/src/hooks/: useWebSocket.ts
web/src/lib/: api.ts  types.ts
windows/: Cargo.toml
windows/src/: main.rs  windows_usb.rs
(+41 files in other folders)
