[package]
name = "usb-passthrough"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "USB/IP Passthrough — Windows service + GUI tray client"

[[bin]]
name = "usb-passthrough"
path = "src/main.rs"

[dependencies]
# Workspace shared crate
usbip-core = { path = "../shared/usbip-core" }
usbip-server = { path = "../server/usbip-server" }
usbip-client = { path = "../client/usbip-client" }

# Workspace standard deps
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Async runtime
futures = "0.3"
anyhow = "1"

# Windows service
windows-service = "0.7"

# Win32 API (SetupAPI, WinUSB)
[dependencies.winapi]
version = "0.3"
features = [
    "setupapi",
    "winusb",
    "ioapiset",
    "handleapi",
    "synchapi",
    "winbase",
    "winnt",
    "cfgmgr32",
    "devguid",
    "usb",
    "usbioctl",
    "ntdef",
    "minwindef",
    "lmapibuf",
]

# GUI
eframe = { version = "0.27", features = ["default"] }
egui = "0.27"
egui-wgpu = "0.27"

# System tray
tray-icon = "0.17"

# IPC channel (for tray ↔ service communication)
crossbeam-channel = "0.5"

# Configuration
dirs = "5"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"
